--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.18.1",
-    "graphql": "^15.3.0"
+    "dotenv": "^8.2.0",
+    "graphql": "^15.3.0",
+    "pg": "^8.4.0"
   }
 }
