--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
-    "pg": "^8.4.0"
+    "pg": "^8.4.0",
+    "ramda": "^0.27.1"
   }
 }
